<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="app_1_title">Spotify Streamer</string>
    <string name="app_2_title">Football Scores App</string>
    <string name="app_3_title">Library App</string>
    <string name="app_4_title">Build It Bigger</string>
    <string name="app_5_title">XYZ Reader</string>
    <string name="app_6_title">Capstone</string>

    <string name="app_1_msg">This button will launch my \"Spotify Streamer\" app!</string>
    <string name="app_2_msg">This button will launch my \"Football Scores\" app!</string>
    <string name="app_3_msg">This button will launch my \"Library\" app!</string>
    <string name="app_4_msg">This button will launch my \"Build It Bigger\" app!</string>
    <string name="app_5_msg">This button will launch my \"XYZ Reader\" app!</string>
    <string name="app_6_msg">This button will launch my \"Capstone\" app!</string>

    <string name="action_settings">Settings</string>

</resources>
