<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/apps_menu_title_bottom_space"
        android:textSize="@dimen/apps_menu_title_text_size"
        android:textColor="@color/apps_menu_title_color"
        android:textAllCaps="false"
        />

    <LinearLayout
        android:layout_width="@dimen/apps_menu_layout_width"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <Button
        android:id="@+id/button_app_1"
        android:text="@string/app_1_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/apps_menu_button_padding"
        android:layout_marginBottom="@dimen/apps_menu_button_bottom_space"
        android:textSize="@dimen/apps_menu_button_text_size"
        android:textStyle="normal"
        android:textColor="@color/apps_btn_text_color"
        android:textAllCaps="true"
        android:background="@drawable/button_with_shadow"
        />

    <Button
        android:id="@+id/button_app_2"
        android:text="@string/app_2_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/apps_menu_button_padding"
        android:layout_marginBottom="@dimen/apps_menu_button_bottom_space"
        android:textSize="@dimen/apps_menu_button_text_size"
        android:textStyle="normal"
        android:textColor="@color/apps_btn_text_color"
        android:textAllCaps="true"
        android:background="@drawable/button_with_shadow"
        />

    <Button
        android:id="@+id/button_app_3"
        android:text="@string/app_3_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/apps_menu_button_padding"
        android:layout_marginBottom="@dimen/apps_menu_button_bottom_space"
        android:textSize="@dimen/apps_menu_button_text_size"
        android:textStyle="normal"
        android:textColor="@color/apps_btn_text_color"
        android:textAllCaps="true"
        android:background="@drawable/button_with_shadow"
        />

    <Button
        android:id="@+id/button_app_4"
        android:text="@string/app_4_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/apps_menu_button_padding"
        android:layout_marginBottom="@dimen/apps_menu_button_bottom_space"
        android:textSize="@dimen/apps_menu_button_text_size"
        android:textStyle="normal"
        android:textColor="@color/apps_btn_text_color"
        android:textAllCaps="true"
        android:background="@drawable/button_with_shadow"
        />

    <Button
        android:id="@+id/button_app_5"
        android:text="@string/app_5_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/apps_menu_button_padding"
        android:layout_marginBottom="@dimen/apps_menu_button_bottom_space"
        android:textSize="@dimen/apps_menu_button_text_size"
        android:textStyle="normal"
        android:textColor="@color/apps_btn_text_color"
        android:textAllCaps="true"
        android:background="@drawable/button_with_shadow"
        />

    <Button
        android:id="@+id/button_app_6"
        android:text="@string/app_6_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/apps_menu_button_padding"
        android:layout_marginBottom="@dimen/apps_menu_button_bottom_space"
        android:textSize="@dimen/apps_menu_button_text_size"
        android:textStyle="bold"
        android:textColor="@color/special_app_btn_text_color"
        android:textAllCaps="true"
        android:background="@drawable/special_button_with_shadow"
        />

    </LinearLayout>

</LinearLayout>
